--- a/Changes.org
+++ b/Changes.org
@@ -7,6 +7,8 @@
 
 #+include: "./resources/normal-outline-3.html" export html
 
+@@html:<br/>@@
+
 You can keep up with upcoming changes, requests for help, bug reports
 and submitted patch by checking [[https://updates.orgmode.org][updates.orgmode.org]] and by subscribing
 to the RSS feeds there.
