--- a/ja/index.org
+++ b/ja/index.org
@@ -24,15 +24,15 @@
     <p class="bubble">
       プロジェクトを応援:&ensp;
       <a href="https://liberapay.com/bzg" title="あなたの寄付がチカラになります"
-         style="font-weight: bold;">
+         style="font-weight: bold; display: inline-block">
         <img class="inline" src="/resources/img/external/librepay.svg" alt="Liberapayのロゴ"/>
         Liberapay</a>&ensp;
       <a href="https://github.com/sponsors/bzg" title="あなたの寄付がチカラになります"
-         style="font-weight: bold;">
+         style="font-weight: bold; display: inline-block">
         <img class="inline" src="/resources/img/external/github.svg" alt="GitHubのロゴ"/>
         GitHub</a>&ensp;
       <a href="https://www.paypal.com/paypalme/bzg/10" title="あなたの寄付がチカラになります"
-         style="font-weight: bold;">
+         style="font-weight: bold; display: inline-block">
         <img class="inline" src="/resources/img/external/paypal.svg" alt="PayPalのロゴ"/>
         PayPal</a></p>
     <meta itemprop="operatingSystem" content="Linux, MacOS, Windows">
