Add link to ML on community page

--- a/community.org
+++ b/community.org
@@ -10,10 +10,13 @@
   :END:
 
 Org mailing list is the central place where to connect with Org
-community.  
+community.
 
 You can [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][subscribe to the list]] and [[https://orgmode.org/list][browse the archive]] here at
 =orgmode.org= or via the [[https://lists.gnu.org/archive/html/emacs-orgmode/][GNU mailman archive]].
+
+Feel free to send an email to [[mailto:emacs-orgmode@gnu.org][emacs-orgmode@gnu.org]], we just won't
+see it till it's moderated if you're not subscribed to the list.
 
 You can also check this page for more [[https://orgmode.org/worg/org-web-social.html][Org news on the social web]].
 
