Update IRC channel (freenode -> libera.chat)

--- a/fr/index.org
+++ b/fr/index.org
@@ -150,7 +150,7 @@ collaborateur.
 
 * Discutter d'Org
 Vous pouvez vous connecter à d'autres org-tousiastes via IRC sur les
-salons ~#org-mode~ et ~#org-mode-fr~ on [[https://freenode.net/][freenode]].
+salons ~#org-mode~ et ~#org-mode-fr~ on [[https://libera.chat][Libera.Chat]].
 
 Il existe aussi une mailing list à laquelle vous pouvez vous [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][abonner]],
 ou visiter ses [[https://orgmode.org/list][archives]] ici sur =orgmode.org= ou via les
