Update links to other editor's Org extensions
Neovim has a new package, which looks like the best option for vimmers,
and there's now a better option available for Sublime Text users.

--- a/install.org
+++ b/install.org
@@ -64,7 +64,7 @@ include org-mode customization and Org-related packages.
 While the full set of Org [[file:features.html][features]] is currently exclusive to Emacs, basic
 functionality for Org files has been implemented for a variety of editors.
 Here are some extensions for other editors that enable support for Org files.
-+ Vim :: [[https://github.com/jceb/vim-orgmode][vim-orgmode]] and [[https://github.com/axvr/org.vim][org.vim]]
++ Vim :: [[https://github.com/kristijanhusak/orgmode.nvim][orgmode.nvim]], [[https://github.com/jceb/vim-orgmode][vim-orgmode]], and [[https://github.com/axvr/org.vim][org.vim]]
 + Atom :: [[https://atom.io/packages/org-mode][org-mode]]
-+ VSCode :: [[https://github.com/vscode-org-mode/vscode-org-mode][vscode-org-mode]]
-+ Sublime :: [[https://packagecontrol.io/packages/orgmode][Orgmode for ST 2 & 3]]
++ VS Code :: [[https://github.com/vscode-org-mode/vscode-org-mode][vscode-org-mode]]
++ Sublime :: [[https://packagecontrol.io/packages/OrgExtended][OrgExtended]]
